Tidy up the notebook

--- a/WorkingScripts/colab.ipynb
+++ b/WorkingScripts/colab.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 48,
       "metadata": {
         "id": "CHBepfhv1TXe"
       },
@@ -46,8 +46,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 1. Setting Google Environment"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 49,
       "metadata": {
         "id": "8JxApUDAk3oO"
       },
@@ -58,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 50,
       "metadata": {
         "id": "yUe7-WU0xNi6"
       },
@@ -71,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -86,7 +93,7 @@
               "\"# Mount the Google Drive\\nfrom google.colab import drive\\ndrive.mount('/content/drive')\""
             ]
           },
-          "execution_count": 37,
+          "execution_count": 51,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -99,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 52,
       "metadata": {
         "id": "PoLndM6ClkPi"
       },
@@ -110,7 +117,7 @@
               "\"# Setting System to Import Packages\\nimport sys\\nsys.path.append('/content/drive/MyDrive/capstone/WorkingScripts')\\nparent_dir = '/content/drive/MyDrive/capstone/\""
             ]
           },
-          "execution_count": 38,
+          "execution_count": 52,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -124,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -132,24 +139,9 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "X0newIcWrdcC"
-      },
-      "source": [
-        "# SKIP\n"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 40,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "sGWxk4rdlkPi",
-        "outputId": "b973480b-c13d-4be4-806c-6d6481168d45"
-      },
+      "execution_count": 54,
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
@@ -210,8 +202,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "X0newIcWrdcC"
+      },
+      "source": [
+        "# ANALYSIS\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 1. Get Shakemap for the related earthquake from the USGS database."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 55,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -236,7 +244,7 @@
               "'/Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/ShakeMaps/nc72282711'"
             ]
           },
-          "execution_count": 41,
+          "execution_count": 55,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -253,8 +261,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 2. Get Census Tract data then intersect it with the earthquake's region."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 56,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -343,16 +358,14 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "i5s4Aq_svewT"
-      },
+      "metadata": {},
       "source": [
-        "# RUN"
+        "## 3. Get the number of building in all earthquake-affected census tract."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -447,8 +460,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 4. Estimate the building damage from the earthquake."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 58,
       "metadata": {
         "id": "cexotjknmOBM"
       },
@@ -463,24 +483,23 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# -- o5 --"
+        "## 5. Incorporate the Building Habitability Index and Social Vulnerability Index to estimate seeking shelters population."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "\n",
         "o4out = o4_output.copy()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [
         {
@@ -490,7 +509,7 @@
               "       '06115041000', '06115041100'], dtype=object)"
             ]
           },
-          "execution_count": 46,
+          "execution_count": 60,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -503,7 +522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [
         {
@@ -833,7 +852,22 @@
         "\n",
         "df = df.sort_values(by=[\"shelter_seeking_low\"], ascending=False)\n",
         "\n",
-        "print(df.head(50))\n",
+        "print(df.head(50))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 6. Saving the Final Output"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 62,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "save_path = os.path.join(parent_dir, f\"Data/final_output_new_{EVENTID}.csv\")\n",
         "df.to_csv(save_path, index=False)"
       ]
